--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "prettier": "prettier --write */**/*.tsx"
   },
   "dependencies": {
     "@nextui-org/react": "^1.0.2-beta.4",
