--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "prepare": "husky install",
-    "prettier": "prettier --write */**/*.tsx"
+    "prettier": "prettier --write src/**/*.tsx"
   },
   "dependencies": {
     "@nextui-org/react": "^1.0.2-beta.4",
