--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "webdev-services",
   "version": "0.1.0",
   "private": true,
+  "workspaces": [
+    "."
+  ],
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -28,9 +31,11 @@
     "jest": "^27.5.1",
     "lint-staged": "^12.3.5",
     "prettier": "^2.5.1",
+    "turbo": "^1.1.5",
     "typescript": "4.5.5"
   },
   "lint-staged": {
     "*.tsx": "yarn lint"
-  }
+  },
+  "packageManager": "yarn@1.22.17"
 }
