--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,11 @@ yarn-error.log*
 .sentryclirc
 
 .turbo
+
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
